2010-05-31  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViActionMaps.cs: Use vi up/down/end
	  commands with arrow and end keys too.

	* Mono.TextEditor.Vi/ViActions.cs: RetreatFromLineEnd now only
	  retreats in caret is in block mode.

	* Mono.TextEditor.Vi/ViMode.cs: Retreat after exiting insert
	  mode. Retreat from line end after caret placed with mouse.
	  Fix 'a' at line end.

	* Mono.TextEditor/EditMode.cs:
	* Mono.TextEditor/TextEditor.cs: Added a caret position change
	  notification for edit modes.

2010-05-31  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/InsertionCursorEditMode.cs: Worked on
	  insertion cursor mode.

2010-05-31  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: added new scroll to overload.

2010-05-31  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViMode.cs: Use OnAdded/OnRemoved to
	  change caret.

	* Mono.TextEditor/TextEditorData.cs: Properly implement the
	  mode OnAdded/OnRemoved calls.

	* Mono.TextEditor/EditMode.cs: Don't access Editor unless
	  necessary. Improves testability. Also properly implement the
	  OnAdded/OnRemoved calls

2010-05-30  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/InsertionCursorEditMode.cs: Worked on
	  insertion cursor mode.

2010-05-29  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs: Fixed 'Bug 610099 -
	  Typing in lines with bubbles very slow'.

2010-05-29  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed 'Bug 610050 - Ruler
	  position wrong in unselected text'.

2010-05-29  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/DefaultEditActions.cs: Fixed 'Bug 610045 -
	  Moving line with url alt-up/down leaves url markers'.

2010-05-29  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Changed middle click
	  paste.
